[package]
edition = "2021"
name = "renderer"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = {version = "=1.0.140", features = ["derive"]}
svg = "0.10.0"
wasm-bindgen = {version = "=0.2.80", features = ["serde-serialize"]}
